--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
     "babel-register": "^6.18.0",
     "lerna": "2.0.0-beta.30",
     "mocha": "^3.1.2"
+  },
+  "dependencies": {
+    "flow-bin": "0.33.0"
   }
 }
